# hyprlang-kotlin

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/dev/cphiri/hyprlang/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dev/cphiri/hyprlang/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
parser/: build.gradle.kts
parser/src/androidTest/java/com/hyprlang/parser/: HyprlangParserTest.kt
parser/src/androidTest/java/dev/cphiri/hyprlang/parser/: ExampleInstrumentedTest.kt  HyprlangParserTest.kt
parser/src/main/cpp/: CMakeLists.txt  hyprlang_wrapper.cpp
parser/src/main/java/com/hyprlang/parser/: HyprlangParser.kt
parser/src/main/java/dev/cphiri/hyprlang/parser/: Annotations.kt  HyprlangParser.kt
parser/src/test/java/dev/cphiri/hyprlang/parser/: ExampleUnitTest.kt
